# routes/users.js
@@ -1,0 +1,16 @@
+const express = require('express');
+const router = express.Router();
+
+const usersController = require('../controllers/users')
+
+router.get('/', usersController.getAllUsers);
+
+router.get('/:id', usersController.getUserById);
+
+router.post('/', usersController.createUser);
+
+router.put('/:id', usersController.updateUser);
+
+router.delete('/:id', usersController.deleteUser);
+
+module.exports = router;
